--- a/20220920/WA50/Northwind.Store.Data/Northwind.Store.Data.csproj
+++ b/20220920/WA50/Northwind.Store.Data/Northwind.Store.Data.csproj
@@ -1,17 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.8" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Northwind.Store.Data\Northwind.Store.Data.csproj" />
     <ProjectReference Include="..\Northwind.Store.Model\Northwind.Store.Model.csproj" />
   </ItemGroup>
 
