--- a/20220920/WA50/WA50/WA50 - Backup.csproj
+++ b/20220920/WA50/WA50/WA50 - Backup.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BuildBundlerMinifier" Version="3.2.449" />
+    <PackageReference Include="BundlerMinifier.Core" Version="3.2.449" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.9" />
   </ItemGroup>
 
@@ -15,9 +15,5 @@
     <ProjectReference Include="..\Northwind.Store.Data\Northwind.Store.Data.csproj" />
     <ProjectReference Include="..\Northwind.Store.Model\Northwind.Store.Model.csproj" />
   </ItemGroup>
-
-	<ItemGroup>
-		<DotNetCliToolReference Include="BundlerMinifier.Core" Version="3.2.449" />
-	</ItemGroup>
 
 </Project>
