--- a/20220927/WA50/WA50/bundleconfig.json
+++ b/20220927/WA50/WA50/bundleconfig.json
@@ -1,21 +1,21 @@
-[
-  {
-    "outputFileName": "wwwroot/js/site.min.js",
-    "inputFiles": [
-      "wwwroot/js/site.js",
-      "wwwroot/js/doc.js"
-    ],
-    "minify": {
-      "enabled": true
-    }
-  },
-  {
-    "outputFileName": "wwwroot/css/site.min.css",
-    "inputFiles": [
-      "wwwroot/css/site.css"
-    ],
-    "minify": {
-      "enabled": true
-    }
-  }
-]
+//[
+//  {
+//    "outputFileName": "wwwroot/js/site.min.js",
+//    "inputFiles": [
+//      "wwwroot/js/site.js",
+//      "wwwroot/js/doc.js"
+//    ],
+//    "minify": {
+//      "enabled": true
+//    }
+//  },
+//  {
+//    "outputFileName": "wwwroot/css/site.min.css",
+//    "inputFiles": [
+//      "wwwroot/css/site.css"
+//    ],
+//    "minify": {
+//      "enabled": true
+//    }
+//  }
+//]
