--- a/proyecto/NorthwindStore/Northwind.Store.UI.Web.Intranet/Northwind.Store.UI.Web.Intranet.csproj
+++ b/proyecto/NorthwindStore/Northwind.Store.UI.Web.Intranet/Northwind.Store.UI.Web.Intranet.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -22,6 +22,10 @@
   <ItemGroup>
     <ProjectReference Include="..\Northwind.Store.Data\Northwind.Store.Data.csproj" />
     <ProjectReference Include="..\Northwind.Store.Model\Northwind.Store.Model.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\lib\" />
   </ItemGroup>
 
 </Project>
