--- a/proyecto/NorthwindStore/Northwind.Store.UI.Web.Intranet/appsettings.Development.json
+++ b/proyecto/NorthwindStore/Northwind.Store.UI.Web.Intranet/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "NW": "Server=.\\sqlexpress;Database=Northwind;Integrated Security=SSPI;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
