--- a/proyecto/NorthwindStore/Northwind.Store.UI.Web.Intranet/appsettings.json
+++ b/proyecto/NorthwindStore/Northwind.Store.UI.Web.Intranet/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "NW": "Server=.\\sqlexpress;Database=Northwind;Integrated Security=SSPI;MultipleActiveResultSets=true"
+    "NW": "Server=.\\sqlexpress;Database=Northwind;User Id=nwuser;Password=nwuser;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
