--- a/proyecto/NorthwindStore/Northwind.Store.UI.Web.Intranet/Properties/launchSettings.json
+++ b/proyecto/NorthwindStore/Northwind.Store.UI.Web.Intranet/Properties/launchSettings.json
@@ -4,7 +4,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development1"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7293;http://localhost:5293"
