--- a/proyecto/NorthwindStore/Northwind.Store.UI.Web.Intranet/appsettings.json
+++ b/proyecto/NorthwindStore/Northwind.Store.UI.Web.Intranet/appsettings.json
@@ -7,6 +7,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
       "Northwind.Store.UI.Web.Intranet": "Error"
+    },
+    "Console": {
+      "LogLevel": {
+        "Northwind.Store.UI.Web.Intranet": "Information"
+      }
     }
   },
   "AllowedHosts": "*"
